--- a/ts16demoX/ts16demoX.csproj
+++ b/ts16demoX/ts16demoX.csproj
@@ -50,5 +50,8 @@
       <Version>1.0.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ts16corelib\ts16corelib.csproj" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
